# FlappyBird_Clone-in-c-and-sfml

./: .gitignore  CMakeLists.txt  README.md  build_and_bash.sh
.cache/clangd/index/: Bird.cpp.C047ECDA6C34F041.idx  Bird.h.BEC617F3301BE48F.idx  Game.cpp.C6674851C793A31C.idx  Game.h.5115DEC09A9EFFE6.idx  GameState.h.1E2A36DD5469D252.idx  Pipe.cpp.B79F55A59C73C482.idx  Pipe.h.C30CBF36E105A616.idx  main.cpp.A32F89A4B26295A1.idx
include/: Bird.h  Game.h  GameState.h  Pipe.h
src/: Bird.cpp  Game.cpp  Pipe.cpp
